# auto-encrypt-text

./: README.md  pyproject.toml  setup.py
.pytest_cache/v/cache/: nodeids
auto_encrypt_text/: __init__.py  core.py
tests/: test_auto_encrypt_text.py
